Another attempt to fix background-image on tablets

--- a/src/index.css
+++ b/src/index.css
@@ -6,27 +6,19 @@
   --secondary-background-color: rgb(13, 110, 253);
 }
 
+html, body {
+  height: 100%; 
+  margin: 0;
+}
+
 body {
   font-family: var(--main-font);
   color: var(--main-font-color);
   overflow-x: hidden;
-}
-
-@media (min-width: 1025px) {
-  body {
-    background-image: url("/public/images/desktop-background.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-}
-
-@media (min-width: 482px) and (max-width: 1024px) {
-  body {
-    background-image: url("/public/images/mobile-background.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+  overflow-y: hidden;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 @media (max-width: 481px) {
@@ -34,3 +26,17 @@ body {
     background-image: url("/public/images/mobile-background.jpg");
   }
 }
+
+@media (min-width: 482px) and (max-width: 1368px) {
+  body {
+    background-image: url("/public/images/mobile-background.jpg");
+  }
+}
+
+@media (min-width: 1369px) {
+  body {
+    background-image: url("/public/images/desktop-background.jpg");
+  }
+}
+
+
